--- a/Dataset exploration.ipynb
+++ b/Dataset exploration.ipynb
@@ -70,7 +70,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "import scipy.stats as stats"
    ]
   },
   {
@@ -124,6 +125,15 @@
    "outputs": [],
    "source": [
     "suicides.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides = suicides.rename(columns={'Crude Rate':'suicide_rate'})"
    ]
   },
   {
@@ -216,17 +226,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt\n",
     "heat[heat.Year == 1999].groupby(['State', 'Month']).mean().query('State == \"Alabama\"')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "heat.query('Year == 2017')"
    ]
   },
   {
@@ -288,15 +288,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "suicides"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -325,7 +316,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.barplot(x='State', y='Crude Rate', data=suicides)"
+    "sns.barplot(x='State', y='suicide_rate', data=suicides)"
    ]
   },
   {
@@ -334,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x='avg_max_t', y='Crude Rate',  data=suicides.query('4 < Month < 10'), hue='Month', legend='full')"
+    "sns.scatterplot(x='avg_max_t', y='suicide_rate',  data=suicides.query('4 < Month < 10'), hue='Month', legend='full')"
    ]
   },
   {
@@ -343,7 +334,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x='avg_max_heat_index', y='Crude Rate', data=suicides.query('4 < Month < 10'), hue='Month', legend='full')"
+    "sns.scatterplot(x='avg_max_heat_index', \n",
+    "                y='suicide_rate', data=suicides.query('4 < Month < 10'), hue='Month', legend='full')"
    ]
   },
   {
@@ -352,7 +344,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x='heat_index_diff', y='Crude Rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+    "sns.lmplot(x='avg_max_heat_index', \n",
+    "                y='suicide_rate', data=suicides.query('4 < Month < 10'), legend='full')"
    ]
   },
   {
@@ -361,7 +354,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x='max_t_diff', y='Crude Rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+    "sns.scatterplot(x='heat_index_diff', y='suicide_rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What if we compare when heat_index diff > 5 to when heat_index diff < 5"
    ]
   },
   {
@@ -370,7 +370,315 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sns.scatterplot(x='min_t_diff', y='Crude Rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+    "sns.lmplot(x='heat_index_diff', y='suicide_rate', data=suicides.query('4 < Month < 10'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='max_t_diff', y='suicide_rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='min_t_diff', y='suicide_rate', data=suicides.query('4 < Month < 10'), hue='Month')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There may be a time effect over the years!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.scatterplot(x='Month Code', y='suicide_rate', data=suicides[suicides.State == 'California'],hue='Month', legend='full')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There is a strong annual trend."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(suicides.groupby('Year').sum().Deaths)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Chi-squared tells us whether two categorical variables are independent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "understand occurences with one object and many factors\n",
+    "chi-squared test\n",
+    "```\n",
+    "                 99   | 00   | 01    | 02 | 03 ... 17\n",
+    "AL suicides      sum    sum    sum    sum   sum ...\n",
+    "CA \n",
+    "CO\n",
+    "...\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "in summer months: categorical variable low heat,  high heat "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Hypothesis 1 - winter gets more suicides than summer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summer = suicides.query('5 < Month < 9')\n",
+    "winter = suicides.query('Month < 4 or Month > 10')\n",
+    "spring = suicides.query('3 < Month < 6')\n",
+    "longsummer = suicides.query('3 < Month < 9')\n",
+    "fall = suicides.query('8 < Month < 11')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.hist(longsummer.suicide_rate, bins='auto', alpha=.5, label='April-August')\n",
+    "plt.hist(winter.suicide_rate, bins='auto', alpha=.5, label='November-March')\n",
+    "# plt.hist(fall.suicide_rate, bins='auto', alpha=.5, label='September-October')\n",
+    "plt.legend()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.ttest_ind(winter.suicide_rate, longsummer.suicide_rate, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's cancel out year effect"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mean out the years\n",
+    "# observations are states\n",
+    "# group by states mean of rate by month\n",
+    "suicides_by_month = suicides.groupby(['Month',\n",
+    "                  'State']).agg('mean').reset_index() \\\n",
+    "                .drop(columns=['Year','Year Code','min_t_diff', 'max_t_diff', 'heat_index_diff'])\n",
+    "suicides_by_month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Paired t-test. Compare the sum of the months against the mean of the months"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summer_by_month = suicides_by_month.query('3 < Month < 9')\n",
+    "winter_by_month = suicides_by_month.query('Month < 4 or Month > 10')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summer_by_month.groupby('State').mean()['suicide_rate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.ttest_rel(summer_by_month.groupby('State').mean()['suicide_rate'], \n",
+    "                winter_by_month.groupby('State').mean()['suicide_rate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cohen's d\n",
+    "def cohen_d(x,y):\n",
+    "    nx = len(x)\n",
+    "    ny = len(y)\n",
+    "    dof = nx + ny - 2\n",
+    "    return (np.mean(x) - np.mean(y)) / np.sqrt(((nx-1)*np.std(x, ddof=1) ** 2 + (ny-1)*np.std(y, ddof=1) ** 2) / dof)\n",
+    "\n",
+    "cohen_d(winter.suicide_rate, longsummer.suicide_rate)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Nope, in fact spring & summer are worse than winter!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(suicides.query('3 < Month < 9').avg_max_heat_index.dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(suicides.query('3 < Month < 9').heat_index_diff.dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_75 = np.quantile(suicides.query('3 < Month < 9').avg_max_heat_index.dropna(), .75)\n",
+    "q_75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_95 = np.quantile(suicides.query('3 < Month < 9').avg_max_heat_index.dropna(), .95)\n",
+    "q_95"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "low_heat = longsummer.query(f'avg_max_heat_index < {q_75}')\n",
+    "high_heat = longsummer.query(f'avg_max_heat_index > {q_95}')\n",
+    "stats.ttest_ind(low_heat.suicide_rate, high_heat.suicide_rate, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_diff_75 = np.quantile(suicides.query('3 < Month < 9').heat_index_diff.dropna(), .75)\n",
+    "q_diff_75"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_diff_95 = "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides.query('3 < Month < 9').groupby('Year').avg_max_heat_index.hist(alpha=.25, bins='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides.query('3 < Month < 9').groupby('Year').heat_index_diff.hist(alpha=.25, bins='auto')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(suicides.query('3 < Month < 9').heat_index_diff.dropna())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.quantile(suicides.query('3 < Month < 9').heat_index_diff.dropna(),.25)"
    ]
   },
   {
