--- a/Dataset exploration.ipynb
+++ b/Dataset exploration.ipynb
@@ -497,6 +497,22 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Cohen's d\n",
+    "def cohen_d(x,y):\n",
+    "    nx = len(x)\n",
+    "    ny = len(y)\n",
+    "    dof = nx + ny - 2\n",
+    "    return (np.mean(x) - np.mean(y)) / np.sqrt(((nx-1)*np.std(x, ddof=1) ** 2 + (ny-1)*np.std(y, ddof=1) ** 2) / dof)\n",
+    "\n",
+    "cohen_d(winter.suicide_rate, longsummer.suicide_rate)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -560,14 +576,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Cohen's d\n",
-    "def cohen_d(x,y):\n",
-    "    nx = len(x)\n",
-    "    ny = len(y)\n",
-    "    dof = nx + ny - 2\n",
-    "    return (np.mean(x) - np.mean(y)) / np.sqrt(((nx-1)*np.std(x, ddof=1) ** 2 + (ny-1)*np.std(y, ddof=1) ** 2) / dof)\n",
-    "\n",
-    "cohen_d(winter.suicide_rate, longsummer.suicide_rate)"
+    "cohen_d(summer_by_month.groupby('State').mean()['suicide_rate'], \n",
+    "        winter_by_month.groupby('State').mean()['suicide_rate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats.ttest_rel(summer_by_month.groupby('State').sum()['suicide_rate'], \n",
+    "                winter_by_month.groupby('State').sum()['suicide_rate'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cohen_d(summer_by_month.groupby('State').sum()['suicide_rate'], \n",
+    "        winter_by_month.groupby('State').sum()['suicide_rate'])"
    ]
   },
   {
