--- a/Dataset exploration.ipynb
+++ b/Dataset exploration.ipynb
@@ -741,7 +741,7 @@
    "outputs": [],
    "source": [
     "southeast = (\"Alabama\", \"Florida\", \"Georgia\", \"Kentucky\", \"Mississippi\", \"North Carolina\", \"South Carolina\", \"Tennessee\")\n",
-    "top_v_bottom(.85, .15, longsummer[longsummer.State.isin(southeast)], 'heat_index_diff', 'suicide_rate')"
+    "top_v_bottom(.9, .1, longsummer[longsummer.State.isin(southeast)], 'heat_index_diff', 'suicide_rate')"
    ]
   },
   {
@@ -824,7 +824,8 @@
    "outputs": [],
    "source": [
     "northeast = (\"Connecticut\", 'Maine', \"Massachusetts\", \"New Hampshire\", \"Rhode Island\", \"Vermont\", \"New Jersey\", \"New York\", \"Pennsylvania\")\n",
-    "top_v_bottom(.85, .15, longsummer[longsummer.State.isin(northeast)], 'heat_index_diff', 'suicide_rate')"
+    "top_v_bottom(.9, .1, longsummer[longsummer.State.isin(northeast)], 'heat_index_diff', 'suicide_rate')\n",
+    "plt.title('Northeast',size='xx-large')"
    ]
   },
   {
@@ -925,22 +926,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import plotly.graph_objects as go\n",
-    "fig = go.Figure(data=go.Choropleth(\n",
-    "    locations=df['code'], # Spatial coordinates\n",
-    "    z = df['total exports'].astype(float), # Data to be color-coded\n",
-    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
-    "    colorscale = 'Reds',\n",
-    "    colorbar_title = \"Millions USD\",\n",
-    "))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "df = pd.read_csv('https://raw.githubusercontent.com/plotly/datasets/master/2011_us_ag_exports.csv')"
    ]
   },
@@ -976,10 +961,53 @@
     "#    colorbar_title = \"Millions USD\",\n",
     "))\n",
     "fig.update_layout(\n",
-    "#    title_text = '2011 US Agriculture Exports by State',\n",
+    "#    title_text = 'US Suicide Rates',\n",
     "    geo_scope='usa', # limit map scope to USA\n",
     ")\n",
-    "fig.show()"
+    "fig.show(renderer=\"png\", width=1000, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=go.Choropleth(\n",
+    "    locations=suicides.groupby('code').mean().index, # Spatial coordinates\n",
+    "    z = suicides.query('3 < Month < 9').groupby('code').mean().suicide_rate - suicides.query('Month < 4 or Month > 10').groupby('code').mean().suicide_rate, # Data to be color-coded\n",
+    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
+    "    colorscale = 'Reds',\n",
+    "#    colorbar_title = \"Millions USD\",\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "#    title_text = 'US Suicide Rates',\n",
+    "    geo_scope='usa', # limit map scope to USA\n",
+    ")\n",
+    "fig.show(renderer=\"png\", width=1000, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=go.Choropleth(\n",
+    "    locations=suicides.groupby('code').mean().index, # Spatial coordinates\n",
+    "    z = (suicides.query('Year == 2011').groupby('code').mean().suicide_rate \n",
+    "        - suicides.query('Year == 1999').groupby('code').mean().suicide_rate) / suicides.query('Year == 1999').groupby('code').mean().suicide_rate, # Data to be color-coded\n",
+    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
+    "    colorscale='RdBu',\n",
+    "    reversescale=True,\n",
+    "    zmid=0\n",
+    "#    colorbar_title = \"Millions USD\",\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "    title_text = \"Suicide Rate Change from 1999 to 2011\",\n",
+    "    geo_scope='usa', # limit map scope to USA\n",
+    ")\n",
+    "fig.show(renderer=\"png\", width=1000, height=800)"
    ]
   },
   {
@@ -999,7 +1027,7 @@
     "#    title_text = '2011 US Agriculture Exports by State',\n",
     "    geo_scope='usa', # limit map scope to USA\n",
     ")\n",
-    "fig.show()"
+    "fig.show(renderer=\"png\", width=1000, height=800)"
    ]
   },
   {
@@ -1028,7 +1056,113 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fig = go.Figure(data=go.Choropleth(\n",
+    "    locations=suicides.query('3 < Month < 9').groupby('code').mean().index, # Spatial coordinates\n",
+    "    z = suicides.query('3 < Month < 9').groupby('code').std().avg_max_heat_index, # Data to be color-coded\n",
+    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
+    "    colorscale = 'Reds',\n",
+    "#    colorbar_title = \"Millions USD\",\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "#    title_text = '2011 US Agriculture Exports by State',\n",
+    "    geo_scope='usa', # limit map scope to USA\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=go.Choropleth(\n",
+    "    locations=suicides.query('3 < Month < 9').groupby('code').mean().index, # Spatial coordinates\n",
+    "    z = suicides.query('3 < Month < 9').groupby('code').std().avg_max_heat_index, # Data to be color-coded\n",
+    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
+    "    colorscale = 'Reds',\n",
+    "#    colorbar_title = \"Millions USD\",\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "#    title_text = '2011 US Agriculture Exports by State',\n",
+    "    geo_scope='usa', # limit map scope to USA\n",
+    ")\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "suicides.groupby('code').mean().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q_diff_90 = np.quantile(suicides.query('3 < Month < 9').dropna().heat_index_diff, .9)\n",
+    "q_diff_90"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}').groupby('code').count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = go.Figure(data=go.Choropleth(\n",
+    "    locations=suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}').groupby('code').count().index, # Spatial coordinates\n",
+    "    z = suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}').groupby('code').count().heat_index_diff, # Data to be color-coded\n",
+    "    locationmode = 'USA-states', # set of locations match entries in `locations`\n",
+    "    colorscale = 'Reds',\n",
+    "#    colorbar_title = \"Millions USD\",\n",
+    "))\n",
+    "fig.update_layout(\n",
+    "#    title_text = '2011 US Agriculture Exports by State',\n",
+    "    geo_scope='usa', # limit map scope to USA\n",
+    ")\n",
+    "fig.show(renderer=\"png\", width=1000, height=800)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}').groupby('code').count().index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}').groupby('Year').count().State)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}')"
    ]
   },
   {
