--- a/Dataset exploration.ipynb
+++ b/Dataset exploration.ipynb
@@ -71,7 +71,9 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import scipy.stats as stats"
+    "import scipy.stats as stats\n",
+    "sns.set_context(\"talk\")\n",
+    "plt.style.use('ggplot')"
    ]
   },
   {
@@ -87,7 +89,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "suicides = pd.read_csv('data/suicides_heat.csv', index_col=0)\n",
+    "def parser(x):\n",
+    "\treturn pd.datetime.strptime(x, '%Y/%m')\n",
+    "\n",
+    "suicides = pd.read_csv('data/suicides_heat.csv', parse_dates=['Month Code'], index_col=0, date_parser=parser)\n",
     "suicides"
    ]
   },
@@ -208,17 +213,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.plot(suicides.groupby('Year').sum().Deaths)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.plot(suicides.groupby('State').mean().heat_index_diff)\n",
-    "plt.style.use('ggplot')"
+    "plt.plot(suicides.groupby('Year').sum().Deaths)\n",
+    "plt.title('Suicides per Year in the US',size='x-large')\n",
+    "plt.xlabel('Year')\n",
+    "plt.ylabel('Suicides')"
    ]
   },
   {
@@ -400,10 +398,11 @@
     "sns.distplot(winter_by_month.suicide_rate, label='November-March')\n",
     "plt.legend()\n",
     "plt.rcParams[\"figure.figsize\"] = (10,6)\n",
+    "\n",
+    "plt.xlabel('suicide rate', size='x-large')\n",
+    "plt.title('Suicides Are Higher in Summer Than Winter',size=24)\n",
     "sns.set_context(\"talk\")\n",
-    "plt.xlabel('suicide rate')\n",
-    "plt.title('Suicides Are Higher in Summer Than Winter')\n",
-    "plt.style.use('seaborn-ticks')"
+    "plt.style.use('ggplot')"
    ]
   },
   {
@@ -648,15 +647,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def top_v_bottom(top, bottom, data, var, target):\n",
+    "def top_v_bottom(top, bottom, data, var, target, var_name=\"unusual heat\"):\n",
     "    data = data.dropna()\n",
     "    q_top = np.quantile(data[var], top)\n",
     "    q_bottom = np.quantile(data[var], bottom)\n",
     "    top_target = data[data[var] >= q_top][target]\n",
     "    bottom_target = data[data[var] <= q_bottom][target]\n",
-    "    sns.distplot(top_target, bins='auto', label=f'{top * 100} percentile\\n{var}')\n",
-    "    sns.distplot(bottom_target, bins='auto', label=f'{bottom * 100} percentile\\n{var}')\n",
-    "    plt.xlabel(target)\n",
+    "    sns.distplot(top_target, label=f'{top*100:.0f}th percentile\\n{var_name}')\n",
+    "    sns.distplot(bottom_target, label=f'{bottom*100:.0f}th percentile\\n{var_name}')\n",
+    "    plt.xlabel(target.replace(\"_\",\" \"),size='xx-large')\n",
     "    plt.legend()\n",
     "    print(stats.ttest_ind(top_target, bottom_target, equal_var=False))\n",
     "    print(\"Cohen's D score: \", cohen_d(bottom_target, top_target))\n",
@@ -664,7 +663,17 @@
     "def diff_95_v_05(data, var, target):\n",
     "    top_v_bottom(.95, .05, data, var, target)\n",
     "    \n",
-    "diff_95_v_05(longsummer, 'heat_index_diff', 'suicide_rate')"
+    "diff_95_v_05(longsummer, 'heat_index_diff', 'suicide_rate')\n",
+    "plt.title(\"Suicide Rate Higher \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.distplot(longsummer.suicide_rate)"
    ]
   },
   {
@@ -700,7 +709,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_v_bottom(.9, .1, longsummer, 'avg_max_heat_index', 'suicide_rate')"
+    "top_v_bottom(.9, .1, longsummer, 'avg_max_heat_index', 'suicide_rate',var_name='heat index')\n",
+    "plt.title(\"Suicide Rate During\\nWarm v. Cool Summer Months\", size=24)"
    ]
   },
   {
@@ -731,7 +741,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "top_v_bottom(.9, .1, longsummer, 'heat_index_diff', 'suicide_rate')"
+    "top_v_bottom(.9, .1, longsummer, 'heat_index_diff', 'suicide_rate')\n",
+    "plt.title(\"Suicide Rate During\\nUnusually Warm v. Cool Summer Months\", size=24)"
    ]
   },
   {
@@ -1163,6 +1174,103 @@
    "outputs": [],
    "source": [
     "suicides.query(f'3 < Month < 9 & heat_index_diff >= {q_diff_90}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Detrend data experiment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(suicides.groupby('Month Code').sum().Deaths)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "# fit linear model\n",
+    "series = suicides.query('State == \"Missouri\"').copy()\n",
+    "X = [i for i in range(0, len(series))]\n",
+    "X = np.reshape(X, (len(X), 1))\n",
+    "y = series.suicide_rate.reset_index(drop=True)\n",
+    "model = LinearRegression()\n",
+    "model.fit(X, y)\n",
+    "# calculate trend\n",
+    "trend = model.predict(X)\n",
+    "# plot trend\n",
+    "plt.plot(y)\n",
+    "plt.plot(trend)\n",
+    "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"best fit: y = {model.coef_[0]:.04f} x + {model.intercept_:.04f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# detrend\n",
+    "detrended = [y[i]-trend[i] + y.mean() for i in range(0, len(series))] \n",
+    "# plot detrended\n",
+    "plt.plot(detrended)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series['detrended_suicide_rate'] = detrended"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "series"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "top_v_bottom(.90, .1, series.query('3 < Month < 9'), 'heat_index_diff', 'detrended_suicide_rate')\n",
+    "plt.title(\"Missouri detrended\",size='xx-large')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(series.heat_index_diff)"
    ]
   },
   {
